--- a/chapter2.tex
+++ b/chapter2.tex
@@ -43,7 +43,7 @@ Vertically, UHIs can be divided based on these boundary layers into three mayor 
 
 \subsection{Surface Urban Heat Island (SUHI)}
 
-The land surface temperature (LST) is measured directly at the surface of an object and is the main indicator of the surface urban heat island (SUHI), which can be found in many cities around the globe~\cite{peng2012surface}. Surface temperature, in contrast to air temperature, is measured via remote sensing technologies via satellites. Well-known satellites include MODIS~\cite{didan2021modis} (NASA), Sentinel 3 (ESA), Meteosat (EUMETSAT), Landsat, and more. The different satellite types carry different types of instruments and sensors, that can take various measurements. The used sensor has a mayor influence on the quality of data, e.g.\ resolution via pixel size, robustness against atmospheric influences, ability to handle clouds, and more. In Section~\ref{sec:feature_engineering} we discuss other features next to LST that are available via satellite data.\\
+The land surface temperature (LST) is measured directly at the surface of an object and is the main indicator of the surface urban heat island (SUHI), which can be found in many cities around the globe~\cite{peng2012surface}. Surface temperature, in contrast to air temperature, is measured via remote sensing technologies via satellites. Well-known satellites include MODIS~\cite{didan2021modis} (NASA), Sentinel 3 (ESA), Meteosat (EUMETSAT), Landsat, and more. The different satellite types carry different types of instruments and sensors, that can take various measurements. The used sensor has a mayor influence on the quality of data, e.g., resolution via pixel size, robustness against atmospheric influences, ability to handle clouds, and more. In Section~\ref{sec:feature_engineering} we discuss other features next to LST that are available via satellite data.\\
 Through the use of satellites, the spatial coverage is great, but raster sizes for older satellites such as MODIS usually range from one to several kilometres, therefore the spatial resolution is not as high. For newer satellites such as Sentinel 2 and Landsat, pixel sizes are improved significantly from 10m to 50m, however complementary data such as derived vegetation indexes are usually not available as precomputed values, adding additional work to the data retrieval process, as later discussed in Section~\ref{subsec: remote sensing}.
 Additionally, weather satellites usually orbit earth to cover wide areas and are not geostationary, therefore only taking measurements a maximum of 1 to 2 times a day, up to every 16 days or even only once a month, depending on the orbit. As a result, the temporal resolution is quite low and especially in the case of UHI detection, this could mean that the satellite misses the peak of the UHI for a given day or even misses the UHI completely. Another downside is the general inability to take LST measurements through clouds, therefore even if the satellite passes over during a UHI, if there are clouds, the UHI cannot be measured. To alleviate the problem there are new methods such as estimating LST based on emitted radiation from clouds~\cite{zhang2015estimation}, however they also have their limitations. Lastly, LST and air temperature are not the same and can vary greatly, especially in extreme heat events~\cite{good2016situ}.\\
 To conclude, SUHI analysis can be a good indicator that there is a UHI phenomenon present in a city and can generally direct further research, however it lacks the temporal resolution to be used for real-time UHI detection and is not able to capture microscale effects of the UHI~\cite{voogt2003thermal, voelkel2017towards}.
@@ -62,7 +62,7 @@ Some shared challenges for all types of UHI include: 1. Define what \textit{urba
 \section{Smart Cities}
 
 Smart Cities offer many new possibilities, enabling new ways of communication and sensing applications. To find out how Smart Cities are structured and how applications could take advantage of data provided by a Smart City, we look at its general architecture.
-The most generalised architecture of a smart city consists of four layers, the sensing layer, transmission layer, data management, and application layer~\cite{silva2018towards}. In this work, we focus on the sensing layer, dealing with topics such as correct sensor placement and underlying sensor footprints, and the application layer, which accesses available data via data management services to provide additional services to the city and its citizens. For the data transmission and data management layers, there already exist different technologies and service offerings, that aim at solving the underlying problems, e.g.\ network bandwidth, network availability, sensor discoverability, handling the massive amounts of data that is already or will be collected in the future, and many more. For the communication and discovery of sensor nodes, one solution could be SkipNet~\cite{harvey2002skipnet}, an overlay network focused on discoverability while also protecting privacy, with which the data transportation layer could be designed as a peer-to-peer (P2P) network. Other research focuses on the data accessibility and discoverability, by making data accessible for everyone, not only for economic partners in a closed-off system. Examples would be the Smart Networks for Urban Citizen Participation (SANE) initiative~\cite{bornholdt2019sane}, which could provide crowd-sourced distributed air temperature sensing with a framework to make sensors searchable and subscribable, allowing real-time applications by consuming sensor data streams. Figure~\ref{fig:system-architecture-overview} shows how an architecture with SANE could look like.\\
+The most generalised architecture of a smart city consists of four layers, the sensing layer, transmission layer, data management, and application layer~\cite{silva2018towards}. In this work, we focus on the sensing layer, dealing with topics such as correct sensor placement and underlying sensor footprints, and the application layer, which accesses available data via data management services to provide additional services to the city and its citizens. For the data transmission and data management layers, there already exist different technologies and service offerings, that aim at solving the underlying problems, e.g., network bandwidth, network availability, sensor discoverability, handling the massive amounts of data that is already or will be collected in the future, and many more. For the communication and discovery of sensor nodes, one solution could be SkipNet~\cite{harvey2002skipnet}, an overlay network focused on discoverability while also protecting privacy, with which the data transportation layer could be designed as a peer-to-peer (P2P) network. Other research focuses on the data accessibility and discoverability, by making data accessible for everyone, not only for economic partners in a closed-off system. Examples would be the Smart Networks for Urban Citizen Participation (SANE) initiative~\cite{bornholdt2019sane}, which could provide crowd-sourced distributed air temperature sensing with a framework to make sensors searchable and subscribable, allowing real-time applications by consuming sensor data streams. Figure~\ref{fig:system-architecture-overview} shows how an architecture with SANE could look like.\\
 In connection to this work, ML-based interpolation, for example for air temperature, could be used to augment Smart City applications by supplying data for sensor locations while a sensor is offline, or by turning discrete sensor readings into a temperature map that could be used by researchers for further heat related analysis or by decision makers to inform and visualise heat stress in a city.\\
 
 \begin{figure}[h]
@@ -75,14 +75,14 @@ In connection to this work, ML-based interpolation, for example for air temperat
 \subsection{Sensing Layer}
 
 The goal for the sensing layer is to monitor the surrounding environment and capture key data for further analysis and decision making. It consists of many different types of physical and virtual sensors. The first group of sensors are the physical sensors, which are placed directly inside the environment. Wireless sensor networks (WSN)~\cite{dargie2010fundamentals} have seen a lot of attention for many different applications such as `military sensing, physical security, air traffic control, traffic surveillance, video surveillance, industrial and manufacturing automation, distributed robotics, environment monitoring, and building and structures monitoring'~\cite{chong2003sensor}. The challenges for WSNs primarily depend among other things on the deployment. An ad-hoc WSN has energy and bandwidth constraints due to the usage of batteries as power sources.
-In contrast, sensors that are permanently installed, either stationary or on a moving target, and connected to a constant power source don't have these constraints. This approach could be used for smart cities to reduce waste and guarantee representative measurements via correct sensor placement. In the case of stationary sensor networks though, the initial deployment and following maintenance cost can be substantial, as seen by the Birmingham Testbed~\cite{chapman2015birmingham}. If the cost is however distributed across many by following a crowd-sourcing approach, e.g.\ crowd-sensing via PWS, larger networks could be maintained, but there are also new challenges introduced by running sensor networks by non-professionals~\cite{meier2017crowdsourcing}.\\
+In contrast, sensors that are permanently installed, either stationary or on a moving target, and connected to a constant power source don't have these constraints. This approach could be used for smart cities to reduce waste and guarantee representative measurements via correct sensor placement. In the case of stationary sensor networks though, the initial deployment and following maintenance cost can be substantial, as seen by the Birmingham Testbed~\cite{chapman2015birmingham}. If the cost is however distributed across many by following a crowd-sourcing approach, e.g., crowd-sensing via PWS, larger networks could be maintained, but there are also new challenges introduced by running sensor networks by non-professionals~\cite{meier2017crowdsourcing}.\\
 In recent years, low-cost sensors (LCS) in combination with sensor networks have enabled fine-granular real-time monitoring of urban environments~\cite{grimmond2006progress, rundel2009environmental}, although the quality of individual low-cost sensors can be questionable~\cite{castell2017can}. Especially PWS data has been used to augment weather data from traditional weather monitoring networks from official weather services~\cite{hahn2022observations}. In general, LCSs can improve data availability and support analysis, but do not substitute well-calibrated reference instrumentation~\cite{lewis2018low}.
 
 \subsubsection{Stationary Sensors}
 
 There are many different types of environmental features that can be measured directly inside an urban area. The types of measurements that can be observed are among others: air temperature, humidity, atmospheric pressure, reactive gaseous air pollutant (CO, NOx, O$_3$, SO$_2$), particulate matter (PM), greenhouse gases (CO$_2$, CH$_4$), precipitation, solar radiation, wind speed and direction, anthropogenic heat, noise, sky-view factor, heat fluxes and many more.
 Correlations between these features can vary greatly based on surrounding factors. To better understand these correlations, many empirical studies have studied the influence of meteorological factors on features such as PM~\cite{tai2010correlations}. Additionally, many fields of statistics have specialised on topics such as statistics in climatology~\cite{von2002statistical}, geostatistics~\cite{trangmar1986application} and more.\\
-All sensor readings that are taken by physical sensors are singular data points. Additionally, to the type of measurement taken and the actual value observed, physical sensor readings include the physical location of the sensor, e.g.\ latitude, longitude and sometimes altitude, the type of sensor used to take the measurement, and sampling rates. For air temperature, the sampling rate could be an average temperature measured over five minutes, whereas precipitation might be measured by collecting rain for certain periods of time and then measuring the amount of rain collected. The sensor type is important, as different types of sensors can produce different qualities of measurements, e.g.\ LCS have lower accuracy compared to calibrated reference-grade high-cost sensors and might have lower response rates, and perform better or worse based on the meteorological conditions, e.g.\ worse performance at low temperatures, high humidity etc. Due to the placement directly inside the environment, (near) real-time observation and high temporal resolution are generally possible but might be influenced by factors such as network availability. The spatial resolution highly depends on the number of sensors deployed and the correct placement of the sensors. The correct placement has a direct influence on the footprint of the sensor~\cite{leclerc2014footprints} and the representativeness of the measurement taken for the underlying and surrounding area~\cite{oke2006guideline}.\\
+All sensor readings that are taken by physical sensors are singular data points. Additionally, to the type of measurement taken and the actual value observed, physical sensor readings include the physical location of the sensor, e.g., latitude, longitude and sometimes altitude, the type of sensor used to take the measurement, and sampling rates. For air temperature, the sampling rate could be an average temperature measured over five minutes, whereas precipitation might be measured by collecting rain for certain periods of time and then measuring the amount of rain collected. The sensor type is important, as different types of sensors can produce different qualities of measurements, e.g., LCS have lower accuracy compared to calibrated reference-grade high-cost sensors and might have lower response rates, and perform better or worse based on the meteorological conditions, e.g., worse performance at low temperatures, high humidity etc. Due to the placement directly inside the environment, (near) real-time observation and high temporal resolution are generally possible but might be influenced by factors such as network availability. The spatial resolution highly depends on the number of sensors deployed and the correct placement of the sensors. The correct placement has a direct influence on the footprint of the sensor~\cite{leclerc2014footprints} and the representativeness of the measurement taken for the underlying and surrounding area~\cite{oke2006guideline}.\\
 One downside of the placement directly in the environment the sensors are observing, is the exposure to environmental influences such as heat, humidity, or pollution, that can decrease the lifetime of a sensor and may require more frequent maintenance or replacement. On example could be that due to pollution in the air, a rain gauge might be cleaned/replaced more often as over time dirt builds up very quickly.
 
 \subsubsection{Mobile Sensors}
@@ -99,7 +99,7 @@ In the context of this work, we focus on air temperature interpolation and have 
 
 Interpolation is in essence to determine unknown data points based on a set of given data points~\cite{steffensen1927interpolation}. In this work, we focus on spatial interpolation which is the interpolation problem applied to spatial data given either as discrete data points or subareas, to determine a complete area. First, we categorize and introduce different spatial interpolation methods to get an understanding about what methods exist, which method is preferred in which application area based on the literature review by \textit{Lam} from 1983~\cite{lam1983spatial}, and augment certain areas with the current state of research. In recent years, many more specialised interpolation methods have been developed for specific use cases, as interpolation is not only about randomly selecting values, but estimating data points based on assumptions about the relationship with the existing data points and the area to interpolate. Depending on the exact use-case, these assumptions could be about the distribution of the data, or as a specific example in the case of interpolating liquids, having constraints such as that method is volume-preserving.\\
 Generally, spatial interpolation methods can be categorised by many different factors. Lam differentiatedbetween point interpolation, which is either exact or approximate, and areal interpolation, which is either non-volume-preserving and the same as point-based interpolation, or volume-preserving. As in situ sensor readings are singular data points at discrete locations, we focus on point interpolation, but note here that such data points could also be mapped into a partial grid first to then use areal interpolation methods.
-Point interpolation methods can either be exact, meaning that the original data points are preserved 1 to 1 in the interpolated area, or approximated, e.g.\ they are fitted to a function that does not necessarily pass through all original data points. The important methods are as follows:
+Point interpolation methods can either be exact, meaning that the original data points are preserved 1 to 1 in the interpolated area, or approximated, e.g., they are fitted to a function that does not necessarily pass through all original data points. The important methods are as follows:
 
 \begin{itemize}
     \item Exact
@@ -125,7 +125,7 @@ Point interpolation methods can either be exact, meaning that the original data 
 \subsection{Exact Point Interpolation}
 
 Exact point interpolation methods have the benefit that the original data points are preserved. Fitting the original data points to a polynomial is the simplest form of interpolation, however it has the mayor drawback that there are no additional constraints for points that are not part of the original data set, potentially resulting in highly unreasonable estimations.\\
-The main idea of weighting methods is the idea to assign more weight to data points that are closer than points that are further away. Due to its simplicity and fast computation, inverse-distance weighting (IDW)~\cite{willmott1985small} is a popular and commonly used interpolation method. The main downside with IWD is that it is a smoothing technique, therefore it is not able to capture local maxima and minima, which could be critical for UHI detection. Splines~\cite{mitavs1988general}, another exact smoothing technique, is a mathematical method that fits either a smooth curve or surface to a set of given points. It offers several advantages such as smoothness and retention of small-scale features, however this method can be computationally expensive and might not be best suited for highly irregular data points, e.g.\ big differences between data points located very close to each other. Finite Difference is a method to calculate a surface based on a set of differential equations, which can calculate a smooth surface from the given points, however at the cost of higher computational cost to solve the differential equations iteratively.\\
+The main idea of weighting methods is the idea to assign more weight to data points that are closer than points that are further away. Due to its simplicity and fast computation, inverse-distance weighting (IDW)~\cite{willmott1985small} is a popular and commonly used interpolation method. The main downside with IWD is that it is a smoothing technique, therefore it is not able to capture local maxima and minima, which could be critical for UHI detection. Splines~\cite{mitavs1988general}, another exact smoothing technique, is a mathematical method that fits either a smooth curve or surface to a set of given points. It offers several advantages such as smoothness and retention of small-scale features, however this method can be computationally expensive and might not be best suited for highly irregular data points, e.g., big differences between data points located very close to each other. Finite Difference is a method to calculate a surface based on a set of differential equations, which can calculate a smooth surface from the given points, however at the cost of higher computational cost to solve the differential equations iteratively.\\
 Kriging, a geostatistical interpolation method, originally developed by Krige~\cite{krige1976review} as a moving averaging technique to reduce global biases, has developed into one of the most prominent spatial interpolation methods and has seen many contributions and improvements since the introduction of Ordinary Kriging (OK) and Universal Kriging~\cite{li2014spatial}.
 
 \subsubsection{Kriging}
